--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,3 @@
-[build]
-  publish = "."
-  functions = "netlify/functions"
-
-[[headers]]
-  for = "/.netlify/functions/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Headers = "Content-Type"
+[functions]
+  # Extend function timeout to maximum allowed (26s free tier, 900s on paid)
+  timeout = 26
